Sun Jul 30 2017 Aleksey
	* Bugfix: illegal instruction error on macOS

Sat Jul 29 2017 Aleksey
	* improve utf-8 support on Windows

Thu Jul 27 2017 Aleksey
	* Bugfix: fix access to long paths on Windows

Mon Jul 17 2017 Aleksey
	* add ca, fr, ro translations

Sun Jul 16 2017  Darío Hereñú
	* full Spanish translation

Mon Jul 10 2017 James Le Cuirot
	* correct build/install command for freebsd

Mon Jul 10 2017 Przemyslaw Pawelczyk
	* compilation fixes for aarch64 and musl

Mon Jul 10 2017 Aleksey
	* improve support of clang on macOS

Sun Nov  6 2016 Aleksey
	* === Version 1.3.4 ===

Tue Nov 17 2015 Alexey Dokuchaev, Kurt Jaeger
	* compilation fixes for FreeBSD

Sat Aug  9 2014 Aleksey
	* return non zero exit code if a file was not found

Tue Aug  5 2014 Aleksey
	* === Version 1.3.3 ===

Mon Aug  4 2014 And Sch, Aleksey
	* librhash: small optimization of Whirlpool

Sat Aug  2 2014 Aleksey
	* option --exclude for skipping some files during recursive scanning

Fri Aug  1 2014 Aleksey
	* update the SHA3 algorithm to follow the changes of the FIPS 202 draft

Wed Jul 30 2014 Aleksey
	* support torrents with more than one announce url

Tue Jul 29 2014 Aleksey
	* LibRHash now exports torrent functions

Mon Jul 21 2014 Tsukasa Oi
	* fixed test_rhash.sh script failing on the en_US.UTF-8 locale

Wed Jul 16 2014 Aleksey
	* changed the `-p' format names of sha* families, see manpage
	* set a boolean in config to true by a string `true', `on' or `yes'

Sun Jul 13 2014 Aleksey
	* Ctrl-C now interrupts benchmarking

Wed Jul  2 2014 Aleksey
	* === Version 1.3.2 ===

Sat Jun 21 2014 Aleksey
	* report warnings on files locked by some processes

Thu Jun 19 2014 Brad Campbell
	* ignore non-regular files while scanning directories recursively

Wed Jun 18 2014 Aleksey
	* option --follow for following symlinks to directories

Sun Apr 13 2014 ZinnKid
	* BTIH piece length calculation updated to follow the uTorrent algorithm change

Wed Jan  8 2014 Aleksey
	* === Version 1.3.1 ===